fix: nav hover for dark mode

--- a/themes/custom/assets/css/main.css
+++ b/themes/custom/assets/css/main.css
@@ -118,4 +118,9 @@ main.greeting h1 {
   nav ul.external img.dark {
     display: block;
   }
+
+  nav ul li a:hover {
+    text-shadow: -0.03ex 0 0 white, 0.03ex 0 0 white;
+  }
+  
 }
